# Rover_RDF_Capstone

./: CMakeLists.txt  README.md
Transceiver KiCad Project/: capstone_transmitter.kicad_pcb  capstone_transmitter.kicad_prl  capstone_transmitter.kicad_pro  capstone_transmitter.kicad_sch
Transmitter_code/: transmitter.cpp
